using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CheckpointHandler : MonoBehaviour
{
    string[] tutorialTriggers = {"DashingTutorial", "WallClimbTutorial", "CombatTutorial", "Moving Platforms Tutorial 1"
    ,"Falling Platforms Tutorial","Breaking Platforms Tutorial"};
    void Start()
    {

    }

    // Update is called once per frame
    void Update()
    {

    }
}
